v2.4.1 (2019.11.xx)
  - (Windows/Linux/Android/OSX) Wait up to 10 seconds for IPv4 network connectivity before executing startup discovery tasks
  - (Linux/OSX) Wait up to one minute for IPv4 network connectivity before executing wakeup discovery tasks

v2.4.0 (2019.11.01)
  - Update SQLite database engine to version 3.30.1
  - Enforce previously relaxed rules regarding invalid JSON data retrieved from the backend and/or local devices
  - Limit EPG data requests to no more than 24 hours into the future if no devices with DVR authorization where discovered
  - Refactor recordings database table to key on auto-generated recording identifier(s) and improve query performance
  - Improve performance of Recorded TV last played (resume) position operations
  - Display prompt indicating that an individual episode timer cannot be removed from a series recording rule
  - Trigger an automatic recording discovery to occur 15 seconds after a new recording rule has been added
  - Trigger initial discovery operations to occur after PVR Manager has been fully initialized and is requesting data
  - Wait for initial discoveries to complete before responding to individual PVR Manager data requests (channels, timers, recordings)
  - (Windows) Limit wait for IPv4 network connectivity during wakeup to one minute
  - Trigger a timer update when notified that the Kodi EPG "days to display" setting(s) have been changed
  - Remove "Startup discovery task delay" advanced setting
  - Remove "Reset discovery database" PVR Client Specific setting
  - Fix bug preventing selection of a non-writable path as a valid EDL file location
  - Rename "EDL file path" EDL setting to "Primary EDL file path"
  - Add secondary and tertiary "Additional EDL file path" EDL settings
  - Fix bug that caused modification of a recording rule back to a default value(s) from being properly applied on the backend